fixing skill section issue on small device

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -16,6 +16,10 @@
     color: map.get(color.$colors, primary);
     margin-top: calc(map.get(space.$spaces, margin, top) + 1.5rem );
 
+    @include responsive.xsm {
+        height: 300px;
+    }
+
     @include responsive.xl {
         margin-top:8rem !important;
     }
@@ -32,7 +36,7 @@
     }
 
     @include responsive.sm {
-        height: 400px;
+        min-height: 400px;
     }
 
     // about left layout
@@ -65,6 +69,11 @@
             text-indent: 1rem;
             line-height: 25px;
             letter-spacing: 1px;
+
+            @include responsive.xsm {
+                font-size: 12px;
+                width: 300px;
+            }
         }
 
         & .about_leftDownload {
@@ -90,6 +99,10 @@
             outline-offset: 10px;
             outline-style: solid;
             outline-width: medium;
+
+            @include responsive.xsm {
+                margin-right: 5rem !important;
+            }
 
             @include responsive.md {
                 height: 300px !important;
