--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @use '../partials/colors' as color;
+@use '../partials/responsive' as responsive;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 * {
@@ -10,6 +11,7 @@
 body {
   background-image: color.$bodyBgColor;
   background-repeat: no-repeat;
+
 }
 
 .App {
@@ -17,4 +19,9 @@ body {
   width: 90vw;
   margin: 0 auto;
   font-family: 'Poppins', sans-serif;
+  
+  @include responsive.xsm {
+    overflow-x: scroll;
+  }
+
 }
